--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/postPublication.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/postPublication.jspx
@@ -97,6 +97,7 @@
 			        					listView="${command.bibtex}" 
 			        					otherPostsUrlPrefix="bla" 
 			        					listViewStartParamName="bibtex.start"
+			        					postsErrorMessages="${command.ErrorMessages}"
 			        					directEdit="${false}"
 										overwrite="${command.overwrite}"
 										updateExistingPost="${command.updateExistingPost}" >
