--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/admin/group.jspx
@@ -1,29 +1,29 @@
 <?xml version="1.0" ?>
 <jsp:root version="2.0" xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:jsp="http://java.sun.com/JSP/Page"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
-	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
-	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/users"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-	xmlns:menu="urn:jsptagdir:/WEB-INF/tags/bstags/menu"
-	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
-	xmlns:form="http://www.springframework.org/tags/form"
-	xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
-	xmlns:spring="urn:http://www.springframework.org/tags"
-	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav"
-	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld">
+		  xmlns:jsp="http://java.sun.com/JSP/Page"
+		  xmlns:c="http://java.sun.com/jsp/jstl/core"
+		  xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
+		  xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
+		  xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/users"
+		  xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+		  xmlns:menu="urn:jsptagdir:/WEB-INF/tags/bstags/menu"
+		  xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
+		  xmlns:form="http://www.springframework.org/tags/form"
+		  xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
+		  xmlns:spring="urn:http://www.springframework.org/tags"
+		  xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav"
+		  xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld">
 
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
-	
+
 	<fmt:message key="navi.admin" var="adminPageTitle" />
-	
+
 	<layout:layout 
 		pageTitle="${adminPageTitle} :: Group" 
 		loginUser="${command.context.loginUser}" 
 		requPath="${requPath}"
 		minimizedContentWidth="${true}">
-		
+
 		<jsp:attribute name="breadcrumbs">
 			<nav:breadcrumbs>
 				<jsp:attribute name="crumbs">
@@ -42,24 +42,24 @@
 				</jsp:attribute>
 			</parts:search>
 		</jsp:attribute>
-		
+
 		<jsp:attribute name="headerExt">
 			<link rel="stylesheet" type="text/css" href="${resdir}/css/adminlucene.css" />
 			<link rel="stylesheet" href="${resdir}/jquery/plugins/ui/jquery-ui.css" type="text/css" media="all" />
 			<link rel="stylesheet" href="${resdir}/jquery/plugins/ui/ui.theme.css" type="text/css" media="all" />
-			
-	    	<script type="text/javascript" src="${resdir}/jquery/plugins/form/jquery.form.js"><!-- keep me --></script> 
+
+			<script type="text/javascript" src="${resdir}/jquery/plugins/form/jquery.form.js"><!-- keep me --></script> 
 			<!--  scripts for ajax autocompletion -->
 			<script src="${resdir}/jquery/plugins/bgiframe/jquery.bgiframe.js" type="text/javascript"><!--  --></script>
 			<script src="${resdir}/jquery/plugins/ui/jquery-ui.js" type="text/javascript"><!--  --></script>
-		  	<script src="${resdir}/jquery/plugins/ui/jquery-ui-i18n.js" type="text/javascript"><!--  --></script>
+			<script src="${resdir}/jquery/plugins/ui/jquery-ui-i18n.js" type="text/javascript"><!--  --></script>
 		</jsp:attribute>
-		
+
 		<jsp:attribute name="content">
 			<fieldset class="fsOuter">
 				<fieldset>
 					<label><h2><fmt:message key="admin.actions.group"/></h2></label>
-					
+
 					<!-- BS3 this. -->
 					<c:if test="${not empty command.adminResponse}">
 						<div class="adminResponse"><c:out value="${command.adminResponse}"/></div>
@@ -86,7 +86,7 @@
 									<div class="help help-content hide"><fmt:message key="settings.group.memberList.help" /></div>
 								</div>
 							</div>
-								
+
 							<!-- shared documents -->
 							<div class="form-group">
 								<form:label cssClass="col-sm-3 control-label" path="group.sharedDocuments">
@@ -112,40 +112,77 @@
 						</fieldset>
 					</form:form>
 				</fieldset>
+
+					<!-- TODO: Test this. -->
+				<c:if test="${not empty command.pendingGroups}">
+					<fieldset>
+						<label>
+							<h2><fmt:message key="admin.group.pending"/></h2>
+						</label>
+
+						<table class="table table-hover">
+							<c:forEach var="entry" items="${command.pendingGroups}">
+								<tr>
+									<td>
+										<a href="${relativeUrlGenerator.getGroupUrlByGroupName(entry.name)}">
+											<c:out value="${entry.name}"/>
+										</a>
+									</td>
+									<!-- show request user name -->
+									<td>
+										<c:out value="${entry.groupRequest.userName}"/>
+									</td>
+									<!-- show request reason -->
+									<td>
+										<c:out value="${entry.groupRequest.reason}"/>
+									</td>
+									<!-- show request submission date -->
+									<td>
+										<c:out value="${entry.groupRequest.submissionDate}"/>
+									</td>
+									<td>
+										<span class="groupsButtons">
+											<a href="/admin/group?action=acceptGroup&amp;group.name=${fn:escapeXml(entry.name)}"><fmt:message key="admin.actions.group.accept"/></a>${mtl:ch('nbsp')}<a href="/admin/group?action=declineGroup&amp;group.name=${fn:escapeXml(entry.name)}"><fmt:message key="admin.actions.group.decline"/></a>	
+										</span>
+									</td>
+								</tr>
+							</c:forEach>
+						</table>
+					</fieldset>
+				</c:if>
 			</fieldset>
-			
+
 			<!-- TODO: Move this to JavaScript-File  -->
 			<!-- Have this working properly, like tag recommendation -->
 			<!--  autocomplete user info box -->
 			<script type="text/javascript">
 			<![CDATA[
-				$(function() {
+				$(function () {
 					addAutocomplete("#designatedAdmin", '2');
-			});
-				function addAutocomplete(id, type) {
-					$(id).autocomplete({
-						source: function ( request, response ) {
+				});
 
-							return $.ajax({
-								url: "../ajax/usersearch",
+			function addAutocomplete(id, type) {
+			$(id).autocomplete({
+				source: function (request, response) {
+					return $.ajax({
+						url: "../ajax/usersearch",
 								data: {search:request.term, limit:10, showSpammers: false },
 								async: false,
 								success: function (data) {
-									var names = new Array();
-									$.each(data.items, function(index, item) {names.push(item.name);});
-									response( $.map( names, function( item ) {
+								var names = new Array();
+										$.each(data.items, function(index, item) {names.push(item.name); });
+										response($.map(names, function(item) {
 										return {
-											label: item,
-											value: item
+										label: item,
+												value: item
 										}
-									}));
+										}));
 								}
 
-							});
-
+						});
+							}
+				});
 					}
-					});  					
-				}
 			]]>
 			</script>
 		</jsp:attribute>				
