validation checks and rename basket-files to clipboard in webapp-module

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/clipboard.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/clipboard.jspx
@@ -107,7 +107,7 @@
 		<jsp:attribute name="infobox">
 			<parts:infobox>
 				<jsp:attribute name="infoTextBody">
-		        	<!-- short info, what the basket is -->
+		        	<!-- short info, what the clipboard is -->
 		            <fmt:message key="basket.info"/>                 
 					<p><fmt:message key="basket.info.examples"/></p>
 				</jsp:attribute>
