--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/clipboard.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/clipboard.jspx
@@ -66,7 +66,7 @@
 		<jsp:attribute name="infobox">
 			<parts:infobox>
 				<jsp:attribute name="infoTextBody">
-		        	<!-- short info, what the basket is -->
+		        	<!-- short info, what the clipboard is -->
 		            <fmt:message key="basket.info"/>                 
 		
 					<!-- quick links on what you can do -->
