--- a/bibsonomy-webapp/src/main/webapp/resources/bootstrap/less/type.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/bootstrap/less/type.less
@@ -311,3 +311,9 @@ address {
   font-style: normal;
   line-height: @line-height-base;
 }
+.truncatedDesc{
+	display: inline-block;
+  	max-width: 300px;
+  	.text-overflow();
+ }
+ 
